[package]
name = "dunes"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.21.3"
proc-bitfield = "0.2.2"

[dev-dependencies]
criterion = { version = "0.4.0" }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"

[[bench]]
name = "klaus"
harness = false

[profile.release]
lto = "thin"
