[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
backend = { path = "../backend" }
cpal = "0.15.2"
pixels = "0.13.0"
# Remove raw-window-handle and rhw_05 feature once wpgu (and pixels) update to
# raw-window-handle v0.6.
raw-window-handle = { version = "0.5.2", features = ["std"] }
rtrb = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
winit = { version = "0.29.4", features = ["rwh_05"] }

[target.'cfg(loom)'.dependencies]
loom = "0.7.1"
